# fake_obstacle_perception

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
launch/: auto_publisher.launch
src/auto_publisher/: auto_publisher.cpp  auto_publisher.h  auto_publisher_node.cpp
src/maker/: widget.cpp  widget.hpp
src/publisher/: widget.cpp  widget.hpp
src/utils/: obstacle.cpp  obstacle.hpp  points_map.cpp  points_map.hpp  read_yaml.cpp  read_yaml.hpp  waypoints.cpp  waypoints.hpp
