<?xml version="1.0"?>
<package format="2">

  <name>fake_obstacle_perception</name>
  <version>0.0.0</version>
  <description>The fake_obstacle_perception package</description>
  <maintainer email="h_ohta@tier4.jp">Hiroki OTA</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>event_capture</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libplanning_utils</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
